--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "axios": "^1.7.9",
     "eslint-plugin-vue": "^10.5.0",
+    "lucide-vue-next": "^0.544.0",
     "naive-ui": "^2.43.1",
     "pinia": "^2.3.0",
     "qs": "^6.14.0",
