--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@heroicons/vue": "^2.2.0",
     "@motionone/vue": "^10.16.4",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "eslint-plugin-vue": "^10.5.0",
     "lucide-vue-next": "^0.544.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.18.6",
     "@types/qs": "^6.14.0",
     "@vitejs/plugin-vue": "^5.2.1",
